--- a/adblock-betafish/button/popup.css
+++ b/adblock-betafish/button/popup.css
@@ -5,43 +5,31 @@
 
 body {
   color: var(--popup-main-text-color);
-  background-color: var(--background-color);
+  background-color: var(--popup-background-color);
 }
 #wrapper {
   font-size: 15px;
-  margin: 0px 0px;
-  width: 275px;
+  margin: 0px 0px 20px 0px;
+  width: 320px;
   max-height: 606px;
 }
 .separator {
   height: 1px;
-  background-color: var(--popup-accent-color);
+  background-color: var(--popup-separator-color);
   opacity: 0.5;
-  margin: 0px 10px;
+  margin: 0px;
 }
 .menu-entry {
-  padding: 2px 10px;
   cursor: pointer;
+  color: var(--popup-link-text);
 }
 .menu-entry:hover {
-  transition: all 0.3s ease-out;
-  -webkit-transition: all 0.3s ease-out;
-  background-color: var(--popup-entry-hovered-bg-color);
-}
-.menu-status-italic {
-  padding: 2px 10px;
-  font-style: italic;
-  display: none;
+  font-weight: bold;
 }
 .right {
   float: right;
 }
-.italic {
-  font-style: italic;
-}
-.last-item {
-  padding-bottom: 8px;
-}
+
 /* HEADER */
 
 .header-logo {
@@ -53,13 +41,14 @@ body {
   display: none;
   font-weight: bold;
   font-size: 8px;
-  border: 0.5px solid var(--premium-badge);
+  border: 0.5px solid var(--premium-badge-border-color);
   border-radius: 2px;
   margin-right: 8px;
   padding-left: 3px;
   padding-right: 3px;
   line-height: 16px;
-  color: var(--premium-badge);
+  background-color: var(--premium-badge-bg-color);
+  color: var(--premium-badge-text-color);
   text-transform: uppercase;
 }
 #header-info {
@@ -81,11 +70,11 @@ body {
 }
 
 #header-icons .material-icons:focus {
-  outline: var(--link-color) auto 5px;
+  outline: var(--popup-url-text-color) auto 5px;
   opacity: 1;
 }
 #titletext {
-  padding: 10px 10px;
+  margin: 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -93,11 +82,24 @@ body {
 #help_link {
   margin-right: 2px;
 }
+#primary_section {
+  display: none;
+}
+.primary_section {
+  width: 288px;
+  background-color: var(--popup-card-background-color);
+  margin-left: 16px;
+  margin-right: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
+  border-radius: 4px;
+}
 
 /* BLOCKED COUNT */
 
 #block_counts {
   display: none;
+  margin-top: 16px;
 }
 #block_counts.remove-bottom-margin {
   margin-bottom: 0px;
@@ -110,24 +112,25 @@ body {
   color: var(--block-count-color);
 }
 a {
-  color: var(--link-color);
+  color: var(--popup-url-text-color);
 }
 a:hover {
   font-weight: bold;
   color: var(--popup-link-hovered);
 }
-.box {
-  margin: 0px;
-  padding: 10px;
-  background-color: var(--popup-block-ads-bg-color);
-}
 
 /* PREMIUM CTAs */
 
-.premium-cta.menu-entry {
+.premium-cta {
   display: flex;
   align-items: stretch;
   padding: 0;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 12px;
+  background-color: var(--popup-card-background-color);
+  border-radius: 4px;
+  min-height: 36px;
 }
 .premium-cta .cta-message {
   margin-left: 8px;
@@ -142,13 +145,14 @@ a:hover {
   flex-grow: 1;
   display: flex;
   align-items: center;
-  padding: 4px 10px;
+  padding: 0px 16px;
+  cursor: pointer;
 }
 button.premium-cta-close {
   display: none;
   width: 28px;
   height: auto;
-  border-radius: 0;
+  border-radius: 0 4px 4px 0;
 }
 button.premium-cta-close:hover {
   box-shadow: none;
@@ -167,10 +171,10 @@ button.premium-cta-close:hover {
   padding: 1px 5px;
   line-height: normal;
 }
-#mabNewCtaClose {
+#mab_new_cta_close {
   background-color: #03bcfc;
 }
-#mabNewCtaClose > i {
+#mab_new_cta_close > i {
   color: white;
 }
 #div_myadblock_enrollment_v2:hover {
@@ -198,13 +202,16 @@ button.premium-cta-close:hover {
   color: var(--popup-themes-cta-color-on-hover);
 }
 .separator.hide-on-new-cta-hover {
-  background-color: var(--background-color);
+  background-color: var(--popup-background-color);
 }
 
 /* STATUS & SYNC */
 
-#div_status_beta {
-  padding-left: 10px;
+#div_sync_outofdate_error_msg,
+#div_sync_error_msg {
+  margin: 0 16px 16px 16px;
+  padding: 16px;
+  border-radius: 4px;
 }
 
 #div_sync_outofdate_error_msg,
@@ -215,8 +222,6 @@ button.premium-cta-close:hover {
   color: var(--sync-msg-color);
   text-align: center;
   cursor: pointer;
-  line-height: 22px;
-  padding: 0px 4px 0px 10px;
   font-size: 14px;
 }
 #div_sync_outofdate_error_msg,
@@ -234,4 +239,156 @@ button.premium-cta-close:hover {
 }
 #div_sync_outofdate_error_msg a span:hover {
   font-weight: normal;
+}
+
+/* BUTTONS */
+
+#btn_unpause_once,
+#btn_unpause_all,
+#btn_enable_adblock_on_this_page {
+  width: 288px;
+}
+#btn_unpause_once:hover,
+#btn_unpause_all:hover,
+#btn_enable_adblock_on_this_page:hover {
+  color: var(--popup-button-reenable-hovered-text-color);
+  background-color: var(--popup-button-reenable-hovered-bg-color);
+}
+.popup-btn.withBorder {
+  border: 0.5px solid;
+  border-color: var(--popup-button-outline-color);
+}
+.popup-btn {
+  height: 36px;
+  width: 122px;
+  border-radius: 4px;
+  margin: 0px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Lato", Arial, sans-serif;
+  font-size: 13px;
+  padding: 0px;
+  font-weight: normal;
+}
+.popup-btn:hover {
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+}
+.popup-btn.grey {
+  color: var(--popup-button-text);
+  background-color: var(--popup-button-background-color);
+}
+.popup-btn.white {
+  color: var(--popup-button-reenable-text-color);
+  background-color: var(--popup-button-reenable-bg-color);
+}
+#btn_pause_once {
+  margin-right: 8px;
+}
+
+/* pause */
+
+#pause_subsection {
+  display: none;
+  margin-top: 16px;
+}
+
+#btn_row {
+  margin-top: 12px;
+  margin-bottom: 24px;
+}
+
+#more_options {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  line-height: 145%;
+}
+
+#hostname,
+#disabled_site_title,
+.channelname {
+  font-size: 18px;
+  font-weight: 700;
+  justify-content: center;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  margin: 0;
+  display: none;
+  overflow-wrap: anywhere;
+}
+
+#div_domain_paused_msg,
+#div_all_paused_msg,
+#div_domain_allowlisted_msg {
+  display: none;
+  padding-top: 16px;
+  padding-bottom: 48px;
+}
+#domain_paused_subsection,
+#all_paused_subsection,
+#allowlisted_subsection {
+  display: none;
+  width: 288px;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-top: 16px;
+  justify-content: center;
+  align-items: center;
+}
+
+/* site specific (YT & Twitch) */
+
+#yt_channel_section,
+#twitch_channel_section {
+  display: none;
+  margin-bottom: 16px;
+  padding-bottom: 16px;
+}
+.channel_name_row {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.channel_icon {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-right: 8px;
+}
+#div_manage_subscribed_channel {
+  padding-top: 12px;
+}
+#btn_allowlist_yt_channel,
+#btn_allowlist_twitch_channel {
+  width: 256px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+#twitch_channel_icon {
+  color: var(--popup-twitch-icon-color);
+}
+#yt_channel_icon {
+  color: var(--popup-yt-icon-color);
+}
+#allowlist_yt_channel_section,
+#allowlisted_yt_channel_section,
+#allowlist_twitch_channel_section,
+#allowlisted_twitch_channel_section,
+#disabled_site_section {
+  display: none;
+}
+#allowlisted_yt_channel_section,
+#allowlisted_twitch_channel_section {
+  padding-bottom: 68px;
+}
+
+/* other, misc */
+
+#disabled_site_img {
+  width: 100%;
+  height: 233px;
 }
