Updated with version: 4.27.0 changes

--- a/adblock-betafish/adblock.css
+++ b/adblock-betafish/adblock.css
@@ -55,6 +55,7 @@ Global Styles
   --popup-twitch-icon-color: #663399;
   /* Additional for Options Page */
   --background-color: white;
+  --link-color: #2284f7;
   --main-text-color: #666666;
   --sidebar-bg-color: #f1f1f1;
   --checkbox-bg-color: #03bcfc;
@@ -77,6 +78,7 @@ Global Styles
   --mab-feature-card-body-bg: #f4f4f4;
   --options-button-text: white;
   --options-button-bg: #ff363b;
+  --options-button-complete-bg: #10b501;
   --options-premium-badge: #666666;
   /* Defaults for all themes:
      These are all the same for the current themes,
