--- a/adblock-betafish/options/color_themes.css
+++ b/adblock-betafish/options/color_themes.css
@@ -8,8 +8,6 @@
   --popup-entry-hovered-bg-color: #000000; /* unused on popup menu */
   --popup-block-ads-bg-color: #333333; /* unused on popup menu */
   --block-count-color: var(--red3);
-  --background-color: #666666; /* unused on popup menu */
-  --link-color: #4ecdf9; /* unused on popup menu */
   --popup-button-text: white;
   --popup-button-disabled-text: #333333;
   --popup-link-text: var(--gray4);
@@ -31,6 +29,8 @@
 
   /* Additional for Options Page */
   --main-text-color: #f4f4f4;
+  --background-color: #666666;
+  --link-color: #4ecdf9;
   --sidebar-bg-color: #4c4c4c;
   --checkbox-bg-color: #03bcfc;
   --not-selected-checkbox-bg-color: #999999;
@@ -52,6 +52,7 @@
   --mab-feature-card-body-bg: #c6c6c6;
   --options-button-text: white;
   --options-button-bg: #ff363b;
+  --options-button-complete-bg: var(--link-color);
   --options-premium-badge: #999999;
   /* Aliases of other properties:
      These are currently all defined by other
@@ -99,6 +100,8 @@
 
   /* Additional for Options Page */
   --main-text-color: #666666;
+  --background-color: white;
+  --link-color: #2284f7;
   --sidebar-bg-color: #f1f1f1;
   --checkbox-bg-color: #03bcfc;
   --not-selected-checkbox-bg-color: #e6e6e6;
@@ -120,6 +123,7 @@
   --mab-feature-card-body-bg: #f4f4f4;
   --options-button-text: white;
   --options-button-bg: #ff363b;
+  --options-button-complete-bg: #10b501;
   --options-premium-badge: #666666;
   /* Aliases of other properties:
      These are currently all defined by other
@@ -167,6 +171,8 @@
   --popup-twitch-icon-color: #663399;
   /* Additional for Options Page */
   --main-text-color: #90a2a2;
+  --background-color: #003643;
+  --link-color: #009f94;
   --sidebar-bg-color: #002c38;
   --checkbox-bg-color: #00a498;
   --not-selected-checkbox-bg-color: #002c38;
@@ -188,6 +194,7 @@
   --mab-feature-card-body-bg: #586e75;
   --options-button-text: #003643;
   --options-button-bg: #dc322f;
+  --options-button-complete-bg: var(--link-color);
   --options-premium-badge: #90a2a2;
   /* Aliases of other properties:
      These are currently all defined by other
@@ -240,6 +247,8 @@
   --popup-twitch-icon-color: #663399;
   /* Additional for Options Page */
   --main-text-color: #607c84;
+  --background-color: #fdf6e3;
+  --link-color: #00a498;
   --sidebar-bg-color: #eee8d5;
   --checkbox-bg-color: #00a498;
   --not-selected-checkbox-bg-color: #eee8d5;
@@ -261,6 +270,7 @@
   --mab-feature-card-body-bg: #eee8d5;
   --options-button-text: white;
   --options-button-bg: #ff363b;
+  --options-button-complete-bg: var(--link-color);
   --options-premium-badge: #607c84;
   /* Aliases of other properties:
      These are currently all defined by other
